name:                   HSRogue
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/Ashe/HSRogue#readme
license:                BSD3
license-file:           LICENSE
author:                 Ashley Smith
maintainer:             ashley@aas.sh
copyright:              2018 Ashley Smith
category:               Game
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable HSRogue
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        apecs,
                        sdl2,
                        sdl2-image,
                        sdl2-ttf,
                        astar,
                        random,
                        containers,
                        unordered-containers,
                        vector,
                        matrix,
                        text
  other-modules:        Types,
                        Common,
                        Components,
                        EventHandler,
                        HandleGameEvents,
                        HandleInterfaceEvents,
                        Draw,
                        WorldSimulation,
                        ActionStep,
                        Resources,
                        GameMap,
                        Characters,
                        CharacterActions
